drrx/fixtures/invalid/invalid-grouping.tree.drrx
.                         # root
+-- app/                  # dir before files in block
| +== later.txt           # EXPECTED ERROR: OR.02 group files first, then spacer, then dirs
